--- a/overrides/config-overrides/normal/gregtech/gregtech.cfg
+++ b/overrides/config-overrides/normal/gregtech/gregtech.cfg
@@ -348,14 +348,14 @@ general {
             # Default: 4 FE == 1 EU
             # Min: 1
             # Max: 16
-            I:euToFeRatio=4
+            I:euToFeRatio=3
 
             # Forge Energy to GTEU ratio for converting FE to EU.
             # Only affects converters.
             # Default: 4 FE == 1 EU
             # Min: 1
             # Max: 16
-            I:feToEuRatio=4
+            I:feToEuRatio=3
 
             # The energy consumption of ME Hatch/Bus.
             # Default: 1.0AE/t
@@ -567,7 +567,7 @@ general {
 
         # Whether to make the Flint and Steel recipe require steel parts.
         # Default: true.
-        B:flintAndSteelRequireSteel=true
+        B:flintAndSteelRequireSteel=false
 
         # Whether to generate Flawed and Chipped Gems for materials and recipes involving them.
         # Useful for mods like TerraFirmaCraft.
@@ -587,7 +587,7 @@ general {
 
         # Recipes for Buckets, Cauldrons, Hoppers, and Iron Bars require Iron Plates, Rods, and more.
         # Default: true
-        B:hardIronRecipes=true
+        B:hardIronRecipes=false
 
         # Whether to make miscellaneous recipes harder.
         # Default: false
